# bookshelf_bot

./: '  .gitignore  Cargo.toml  bookshelf_database.db
src/: database.rs  main.rs
